# QY_registration

./: CMakeLists.txt  ComputationalTools.cpp  ComputeGeometricEntity.cpp  Demons.cpp  GlutManager.h  MeshObject.h  Optimization-lbfgs.cpp  PolyhedralSurf.cpp  SignatureManager.cpp  stdafx.h
